--- a/src/templates/src/golf_classic.html
+++ b/src/templates/src/golf_classic.html
@@ -22,7 +22,7 @@
         </button>
         <div class="row">
             <div class="col-9">
-                <img src="/static/images/golf/{{year}}/header-img.jpg" style="width: 100%;">
+                <img src="/static/images/golf/{{year}}/header-img.jpg" style="width: 85%;">
                 <div class="row">
                     <div class="col-8">
                         {% for description_paragraph in descr %}
@@ -42,7 +42,7 @@
             </div> 
             <div class="col-3" style="border: 2px solid black;">
                 {% for im in sponsor_images %}
-                    <img src="{{im}}">
+                    <img src="{{im}}" style="width: 100%;">
                 {% endfor %}
             </div> 
         </div> 
