--- a/src/templates/src/home.html
+++ b/src/templates/src/home.html
@@ -1,27 +1,34 @@
 {% extends "src/base.html" %}
 
 {% block content %}
+
 <!-- <script type="text/javascript" src="/test/wp-content/themes/child/script/jquery.jcarousel.min.js"></script> -->
     <div class="container">
         <h1 class="text-center">S3C</h1>
         <h4 class="text-center">Supporting the Cancer Community since 2009</h4>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="height: 400px !important">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
+            <div class="carousel-inner"  style="height: 100% !important">
+              <div class="carousel-item active" style="height: 100% !important">
                 <img src="/static/images/golf/2017/flier.jpg" class="d-block w-100">
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" style="height: 100% !important">
                 
-                <img src="/static/images/golf/2017/unrolledloop.png" class="d-block w-100">
+                <img src="/static/images/golf/2017/unrolledloop.png" class="d-block w-100" style="height: 100%;">
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" style="height: 100% !important">
                 <!-- <img src="/static/images/golf/2017/unrolledloop.png" class="d-block w-100"> -->
-                <p>Hello</p>
+                <h6>Our reach ...</h6>
+                <h4> <b>Cancer Research:</b> $43,620.00</h4>
+                <h4> <b>Family Support:</b> $145,482.00</h4>
+                <h4> <b>Scholarships:</b> $153,230.00</h4>
+                <h4> <b>Patient Care Focus (Hospitals, Hospice & Non-Profit):</b> $35,000.00</h4>
+                <h4> <b>Product Donation (Hospitals, Benefits, & Non-Profit):</b> $22,275.00</h4>
+                <h4> <b>Community Service Hours Awarded to H.S. Students:</b> 1231 hrs</h4>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -32,6 +39,28 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
+          </div>
+
+          <div class="row" style="padding-top: 1.5rem;">
+            <div class="col-6">
+              <h4>S3C Supports the Cancer Community!</h4>
+              <p>S3C’s ambition is to lend support to the cancer community on every level and avenue revealed to us.  Whether it is providing financial assistance to families for cancer related expenses, hosting collection drives for essential items, partnering with clubs and organizations to host fundraisers, volunteering our time at local charity events, raising funds for cancer research, or simply encouraging individuals to find hope, we are on a mission to better our community, specifically those faced with the varied challenges cancer poses.</p>
+            </div>
+            <div class="col-6">
+              <h4> S3C's Success Depends on Sponsors</h4>
+              <p>Sponsorship dollars are essential to the success of our annual events.  S3C seeks to underwrite the cost of our events so that every penny will directly impact the Cancer Community.  To date we've successfully covered the expenses and then some from generous corporate sponsors.  Thank you for ensuring every donation impacts a family in our Cancer Community!</p>
+              <p><b>Donations To S3C are Tax-Deductible</b><br>S3C is an Ohio 501 (c)(3) non-profit organization recognized by the IRS, and all donations to S3C are tax-deductible in accordance with IRS regulations.</p>
+              <!-- <div class="row">
+                <div class="col-6">
+                  <p>Follow us on Twitter...</p>
+                  <p>Like us on Facebook...</p>
+                </div>
+                <div class="col-6">
+                  <p>@S3C_Inc</p>
+                  <p>facebook.com/s3cohio</p>
+                </div>
+              </div> -->
+            </div>
           </div>
     </div>
     
