--- a/custAdmin/templates/custAdmin/home.html
+++ b/custAdmin/templates/custAdmin/home.html
@@ -4,6 +4,9 @@
     <div class="container">
         <ul>
             <li>
+                <a href="/admin/home">Home</a>
+            </li>
+            <li>
                 <a href="/admin/golf">People</a>
             </li>
             <li>
