--- a/src/templates/src/home.html
+++ b/src/templates/src/home.html
@@ -24,19 +24,38 @@
             {% elif b.key == 'two_pic_frame' %}
               <div class="carousel-item" style="height: 100% !important">
                 <div style="display: flex; width: 100% !important; height: 100%;">
-
+                  
+                  <div style="flex: 2; padding: 0.5rem;">
+                    <img src="/static/images/home/{{b.img1}}" class="d-block w-100" style="max-height: 100%; object-fit: contain;">
+                  </div>
+                  
                   <div style="flex: 2;">
                     <h3>{{b.title}}</h3>
                     {% for t in b.text %} 
                       <p>{{t}}</p>
                     {% endfor %}
                   </div>
-                  <div style="flex: 2; padding: 0.5rem;">
-                    <img src="/static/images/home/{{b.img1}}" class="d-block w-100" style="max-height: 100%; object-fit: contain;">
-                  </div>
                   
                   <div style="flex: 2; padding: 0.5rem;">
                     <img src="/static/images/home/{{b.img2}}" class="d-block w-100" style="max-height: 100%; object-fit: contain;">
+                  </div>
+                  
+                </div>
+              </div>
+            
+            {% elif b.key == 'golf_outing' %}
+              <div class="carousel-item" style="height: 100% !important">
+                <div style="display: flex; width: 100% !important; height: 100%;">
+
+                  <div style="flex: 3;">
+                    <h3>{{b.title}}</h3>
+                    {% for t in b.text %} 
+                      <p>{{t}}</p>
+                    {% endfor %}
+                  </div>
+                  
+                  <div style="flex: 5; padding: 0.5rem;">
+                    <img src="/static/images/home/{{b.img1}}" class="d-block w-100" style="max-height: 100%; object-fit: contain;">
                   </div>
                   
                 </div>
